--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -23,7 +23,7 @@
 	.blog-title {
 	    margin-top: 50px;
 	    margin-bottom: 50px;
-	    margin-left: $header-left-margin;
+	    // margin-left: $header-left-margin;
 	    float: left;
 	    font-size: 2.2em;
 	    line-height: 0;
