--- a/src/scss/wanchope.scss
+++ b/src/scss/wanchope.scss
@@ -2,6 +2,12 @@
 /// Wanchope main CSS stylesheet
 ////
 
+$IMGPATH:			'../images/';
+
+@function getImgage( $path, $refresh:false, $IMGPATH: $IMGPATH ) {
+	@return url( $IMGPATH + $path + if($refresh!=false, '?' + $refresh, '') );
+}
+
 $base-em:			0.9375em;
 $offset:			$base-em;
 
@@ -15,13 +21,25 @@ $text-muted:			#999;
 $ui-color-primary: 		#DDD;
 $ui-color-secondary: 	#f1f1f1;
 
+// $brand-primary:			#000;
+$brand-secondary:		#2D3642;
+
 // Text
 $font-size-h1: 		2.75em;
 $font-size-h2: 		2.25em;
-// $font-size-h3: 1em;
-// $font-size-h4: 1em;
-// $font-size-h5: 1em;
-// $font-size-h6: 1em;
+$font-size-h3: 		1.9em;
+$font-size-h4: 		1.75em;
+$font-size-h5: 		1.2em;
+$font-size-h6: 		1.05em;
+
+// $content-inner-width: 		87.5%;
+
+$main-padding-top:			50px;
+
+$vertical-divider-offset: 		$main-padding-top;
+$post-bubble-size: 				$vertical-divider-offset;
+
+
 
 // @import "reset";
 h1, h2, h3, h4, h5, h6, p, blockquote, address, big, cite, code, em, font, img, small, strike, sub, sup, li, ol, ul, fieldset, form, label, legend, button, table, caption, tr, th, td {
@@ -37,15 +55,24 @@ h1, h2, h3, h4, h5, h6, p, blockquote, address, big, cite, code, em, font, img, 
 }
 
 // Bootstrap
-// @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "bootstrap-sass/bootstrap";
-@import "../../bower_components/bodokecss/bodokecss/utils/mixins";
-@import "../../bower_components/bodokecss/bodokecss/utils/functions";
+// @import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
+@import 'bootstrap-sass/bootstrap';
+@import '../../bower_components/bodokecss/bodokecss/utils/mixins';
+@import '../../bower_components/bodokecss/bodokecss/utils/functions';
+
 
 // Wanchope
-@import "layout/layout";
-@import "component/panel";
-@import "component/post";
+@import 'utils/fonts';
+
+// Font Awesome
+@import 'utils/font-awesome';
+@import 'utils/font-awesome-icons';
+
+@import 'layout/layout';
+@import 'component/table';
+@import 'component/panel';
+@import 'component/post-preview';
+@import 'component/post';
 
 
 /* estilos.css */
@@ -66,8 +93,7 @@ body {
     zoom: 1.001;
     color: $text-color;
     background: $ui-color-secondary;
-    // font-family: 'Lato', 'Helvetica Neue', sans-serif;
-    font-family: 'Raleway', 'Helvetica Neue', sans-serif;
+    font-family: 'Raleway', 'Helvetica 		Neue', sans-serif;
     word-break: break-word;
     hyphens: auto;
     hyphens: auto;
@@ -79,6 +105,19 @@ h3 { font-size: 1.5em; }
 h4 { font-size: 1.125em; }
 h5 { font-size: 1.142857143em; }
 h6 { font-size: 1.33em; }
+
+hr {
+	margin: 3.5em auto;
+}
+
+/**
+ * Bootstrap alert
+ */
+.alert {
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+}
+
 
 .navbar {
     display: none;
@@ -93,37 +132,4 @@ h6 { font-size: 1.33em; }
     background: transparent;
 }
 
-.post-content .content {
-    padding-top: 0;
-}
-
 img { max-width: 100%; }
-pre code { display: block; }
-pre, code {white-space:normal;}
-
-pre {
-    margin-bottom: 2.5em;
-}
-
-.token.operator,
-.token.entity,
-.token.url, .language-css
-.token.string, .style
-.token.string,
-.token.variable {
-	background: transparent;
-}
-
-.post-content {
-	.content {
-		padding-top: 0;
-	}
-}
-
-img { max-width: 100%; }
-pre code { display: block; }
-pre, code {white-space:normal;}
-
-pre {
-	margin-bottom: 2.5em;
-}
