--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -52,7 +52,7 @@ main {
 .content-inner {
     // float: right;
     position: relative;
-    padding: 5.5%;
+    padding: $content-inner-vertical-padding $content-inner-horizontal-padding;
     background: #FFF;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     // Flecha izquierda
